underline deleted, some information added/changed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <title>Home &mdash; Sanghoon Kim</title>
+    <title>Sanghoon Kim</title>
 
     <link rel="shortcut icon" href="./img/favicon.ico">
     <link rel="stylesheet" href="./css/alabaster.css" type="text/css">
@@ -33,7 +33,7 @@
       <div class="bodywrapper">
         <div class="body" role="main">
 	  
-	    <a href="."><div class="bodylogo">Sanghoon Kim</div></a>
+	    <a style="text-decoration: none" href="."><div class="bodylogo">Sanghoon Kim</div></a>
 	  
           
             <p>Junior undergraduate student at <a href="https://www.unist.ac.kr">UNIST</a>, majoring in CSE(Computer Science &amp; Engineering).</p>
@@ -52,13 +52,17 @@
 <p><br></p>
 <h3 id="experiences">Experiences</h3>
 <hr />
-<h4 id="internship-at-necsst-unist-201603-201702"><strong>Internship</strong> at <a href="https://next.unist.ac.kr">NECSST</a>, UNIST. (2016.03 ~ 2017.02)</h4>
+<h4 id="internship-at-necsst-lab-unist-201603-201702"><strong>Internship</strong> at <a href="http://next.unist.ac.kr">NECSST Lab.</a>, UNIST. (2016.03 ~ 2017.02)</h4>
 <p><br></p>
 <h3 id="awards">Awards</h3>
 <hr />
-<h4 id="excellence-award-in-2017-korea-supercomputing-challengeksc2017"><strong>Excellence award</strong> in 2017 Korea Supercomputing Challenge(KSC2017)</h4>
+<h4 id="excellence-award-in-2017-korea-supercomputing-challenge"><strong>Excellence award</strong> in <a href="https://webedu.ksc.re.kr/index.es?sid=a3">2017 Korea Supercomputing Challenge</a></h4>
 <ul>
 <li>Awarded by the president of KSCSE(Korean Society for Computational Science and Engineering).</li>
+</ul>
+<h4 id="semester-academic-excellence-award-for-2017-spring-semester"><strong>Semester academic excellence award</strong> for 2017 Spring semester</h4>
+<ul>
+<li>Semester GPA 3.92 / 4.30</li>
 </ul>
 <h4 id="academic-performance-scholarship-since-201503-now"><strong>Academic performance scholarship</strong> since 2015.03 - Now</h4>
 <p><br></p>
@@ -82,12 +86,14 @@
         Powered by <a href="http://www.mkdocs.org">MkDocs 0.17.2</a>
         &amp; <a href="https://github.com/iamale/mkdocs-alabaster">Alabaster</a>
       
+      <!-- Build date represenation -->
+      <br>Last update: 2017-11-22 10:55:18 UTC
     </div>
   
 
   <!--
   MkDocs version      : 0.17.2
-  Docs Build Date UTC : 2017-11-22 04:07:57
+  Docs Build Date UTC : 2017-11-22 10:55:18
   -->
 </body>
 </html>
