--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 	    <a style="text-decoration: none" href="."><div class="bodylogo">Sanghoon Kim</div></a>
 	  
           
-            <p>Junior undergraduate student at <a href="https://www.unist.ac.kr">UNIST</a>, majoring in CSE(Computer Science &amp; Engineering).</p>
+            <p>Junior undergraduate student at <a href="https://www.unist.ac.kr">UNIST</a>, majoring in CSE(Computer Science &amp; Engineering).
+<br>If you are interested, please e-mail me. (<a href="./seiker@unist.ac.kr">seiker@unist.ac.kr</a>)</p>
 <p><br></p>
 <h3 id="available-languages">Available Languages</h3>
 <hr />
@@ -87,13 +88,13 @@
         &amp; <a href="https://github.com/iamale/mkdocs-alabaster">Alabaster</a>
       
       <!-- Build date represenation -->
-      <br>Last update: 2017-11-22 10:55:18 UTC
+      <br>Last update: 2017-11-22 12:58:30 UTC
     </div>
   
 
   <!--
   MkDocs version      : 0.17.2
-  Docs Build Date UTC : 2017-11-22 10:55:18
+  Docs Build Date UTC : 2017-11-22 12:58:30
   -->
 </body>
 </html>
