HSK information updated.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </ul>
 <h4 id="chinese-low-level-conversation-available"><strong>Chinese</strong> : Low-level conversation available</h4>
 <ul>
-<li><a href="http://www.chinesetest.cn/ChangeLan.do?languge=en">HSK level 3</a> score: 276/300 (Valid until Feb. 21, 2018)</li>
+<li><del><a href="http://www.chinesetest.cn/ChangeLan.do?languge=en">HSK level 3</a> score: 276/300</del> (Invalidated since Feb. 21, 2018)</li>
 </ul>
 <p><br></p>
 <h3 id="experiences">Experiences</h3>
@@ -90,13 +90,13 @@
         &amp; <a href="https://github.com/iamale/mkdocs-alabaster">Alabaster</a>
       
       <!-- Build date represenation -->
-      <br>Last update: 2018-02-10 07:18:26 UTC
+      <br>Last update: 2018-03-02 13:21:35 UTC
     </div>
   
 
   <!--
   MkDocs version      : 0.17.2
-  Docs Build Date UTC : 2018-02-10 07:18:26
+  Docs Build Date UTC : 2018-03-02 13:21:35
   -->
 </body>
 </html>
