--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <html>
 <head>
   
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-92730995-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-92730995-2');
+    </script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
     <title>Sanghoon Kim</title>
@@ -54,8 +63,22 @@
 <p><br></p>
 <h3 id="experiences">Experiences</h3>
 <hr />
-<h4 id="internship-at-necsst-lab-unist-sep-2016-aug-2017"><strong>Internship</strong> at <a href="http://next.unist.ac.kr">NECSST Lab.</a>, UNIST. (Sep. 2016 - Aug. 2017)</h4>
-<h4 id="internship-at-ivader-lab-unist-jan-2018-now"><strong>Internship</strong> at <a href="http://ivaderlab.unist.ac.kr">iVADER Lab.</a>, UNIST. (Jan. 2018 - Now)</h4>
+<h4 id="internship-at-necsst-lab-unist"><strong>Internship</strong> at <a href="http://next.unist.ac.kr">NECSST Lab.</a>, UNIST.</h4>
+<ul>
+<li>Period: Sep. 2016 - Aug. 2017</li>
+</ul>
+<h4 id="internship-at-ivader-lab-unist"><strong>Internship</strong> at <a href="http://ivaderlab.unist.ac.kr">iVADER Lab.</a>, UNIST.</h4>
+<ul>
+<li>Period: Jan. 2018 - Now</li>
+</ul>
+<h4 id="domestic-exchange-student-to-snu-south-korea"><strong>Domestic Exchange Student</strong> to <a href="https://en.snu.ac.kr/">SNU</a>, South Korea.</h4>
+<ul>
+<li>Period: 2016 Summer semester (Jun. 2016 - Aug. 2016), 2016 Winter semester (Dec. 2016 - Feb. 2017)</li>
+</ul>
+<h4 id="international-exchange-student-to-hkust-hong-kong"><strong>International Exchange Student</strong> to <a href="https://www.ust.hk/">HKUST</a>, Hong Kong.</h4>
+<ul>
+<li>Period: 2018 Summer semester (Jun. 2018 - Now)</li>
+</ul>
 <p><br></p>
 <h3 id="awards">Awards</h3>
 <hr />
@@ -66,6 +89,10 @@
 <h4 id="semester-academic-excellence-award-for-2017-spring-semester"><strong>Semester academic excellence award</strong> for 2017 Spring semester</h4>
 <ul>
 <li>Semester GPA 3.92 / 4.30</li>
+</ul>
+<h4 id="semester-academic-excellence-award-for-2018-spring-semester"><strong>Semester academic excellence award</strong> for 2018 Spring semester</h4>
+<ul>
+<li>Semester GPA 4.10 / 4.30</li>
 </ul>
 <h4 id="academic-performance-scholarship-since-mar-2015-now"><strong>Academic performance scholarship</strong> since Mar. 2015 - Now</h4>
 <p><br></p>
@@ -90,13 +117,13 @@
         &amp; <a href="https://github.com/iamale/mkdocs-alabaster">Alabaster</a>
       
       <!-- Build date represenation -->
-      <br>Last update: 2018-03-02 13:21:35 UTC
+      <br>Last update: 2018-06-27 06:53:40 UTC
     </div>
   
 
   <!--
   MkDocs version      : 0.17.2
-  Docs Build Date UTC : 2018-03-02 13:21:35
+  Docs Build Date UTC : 2018-06-27 06:53:40
   -->
 </body>
 </html>
