--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 	    <a style="text-decoration: none" href="."><div class="bodylogo">Sanghoon Kim</div></a>
 	  
           
-            <p>Junior undergraduate student at <a href="https://www.unist.ac.kr">UNIST</a>, majoring in CSE(Computer Science &amp; Engineering).
-<br><br>Currently, I am an undergraduate intern at <a href="http://ivaderlab.unist.ac.kr">iVADER lab</a>.
+            <p>Senior undergraduate student at <a href="https://www.unist.ac.kr">UNIST</a>, majoring in CSE(Computer Science &amp; Engineering).
+<br><br>Currently, I am working as an undergraduate intern in <a href="http://ivaderlab.unist.ac.kr">iVADER lab</a>.
 <br>If you are interested, please e-mail me. (<a href="./seiker@unist.ac.kr">seiker@unist.ac.kr</a>)</p>
 <p><br></p>
 <h3 id="available-languages">Available Languages</h3>
@@ -56,20 +56,21 @@
 <li><a href="https://www.ets.org/toeic">TOEIC</a> score: 920/990 (Valid until Jan. 08, 2019)</li>
 <li><a href="https://www.teps.or.kr/">TEPS</a> score: 714/990 (Valid until Dec. 03, 2019)</li>
 </ul>
-<h4 id="chinese-low-level-conversation-available"><strong>Chinese</strong> : Low-level conversation available</h4>
-<ul>
-<li><del><a href="http://www.chinesetest.cn/ChangeLan.do?languge=en">HSK level 3</a> score: 276/300</del> (Invalidated since Feb. 21, 2018)</li>
-</ul>
+<!--####**Chinese** : Low-level conversation available
+- ~~[HSK level 3](http://www.chinesetest.cn/ChangeLan.do?languge=en) score: 276/300~~ (Invalidated since Feb. 21, 2018)-->
+
 <p><br></p>
 <h3 id="experiences">Experiences</h3>
 <hr />
 <h4 id="internship-at-necsst-lab-unist"><strong>Internship</strong> at <a href="http://next.unist.ac.kr">NECSST Lab.</a>, UNIST.</h4>
 <ul>
 <li>Period: Sep. 2016 - Aug. 2017</li>
+<li>Studied briefly about Linux kernel, distributed computer &amp; storage systems, and flash memory &amp; FTL(Flash Translation Layer).</li>
 </ul>
 <h4 id="internship-at-ivader-lab-unist"><strong>Internship</strong> at <a href="http://ivaderlab.unist.ac.kr">iVADER Lab.</a>, UNIST.</h4>
 <ul>
 <li>Period: Jan. 2018 - Now</li>
+<li>Participated in a project which helps novice programmers to design mobile applications. (Paper submitted to CHI 2019)</li>
 </ul>
 <h4 id="domestic-exchange-student-to-snu-south-korea"><strong>Domestic Exchange Student</strong> to <a href="https://en.snu.ac.kr/">SNU</a>, South Korea.</h4>
 <ul>
@@ -77,7 +78,7 @@
 </ul>
 <h4 id="international-exchange-student-to-hkust-hong-kong"><strong>International Exchange Student</strong> to <a href="https://www.ust.hk/">HKUST</a>, Hong Kong.</h4>
 <ul>
-<li>Period: 2018 Summer semester (Jun. 2018 - Now)</li>
+<li>Period: 2018 Summer semester (Jun. 2018 - Aug. 2018)</li>
 </ul>
 <p><br></p>
 <h3 id="awards">Awards</h3>
@@ -117,13 +118,13 @@
         &amp; <a href="https://github.com/iamale/mkdocs-alabaster">Alabaster</a>
       
       <!-- Build date represenation -->
-      <br>Last update: 2018-06-27 06:53:40 UTC
+      <br>Last update: 2018-09-11 11:03:50 UTC
     </div>
   
 
   <!--
   MkDocs version      : 0.17.2
-  Docs Build Date UTC : 2018-06-27 06:53:40
+  Docs Build Date UTC : 2018-09-11 11:03:50
   -->
 </body>
 </html>
