Revise index.html

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 
 	<body>
 		<h1>Please be patient!</h1>
-		I'm planning to make newer, blog-styled webpage.
-		If you want to see your old CV page, please follow <a href="http://seiker.kr/old/index.html">this link</a>.
+		<br>I'm planning to make newer, blog-styled webpage.
+		<br>If you want to see your old CV page, please follow <a href="http://seiker.kr/old/index.html">this link</a>.
 
-		Thank you so much!
-		Sanghoon Kim (seiker@unist.ac.kr)
+		<br><br>Thank you so much!
+		<br>Sanghoon Kim (seiker@unist.ac.kr)
 
-		Last update: Jan. 4th, 2019
+		<br><br>Last update: Jan. 4th, 2019
 	</body>
 </html>
