--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<h1>Please be patient!</h1>
 		<br>I'm planning to make newer, blog-styled webpage.
-		<br>If you want to see your old CV page, please follow <a href="http://seiker.kr/old/index.html">this link</a>.
+		<br>If you want to see my old CV page, please follow <a href="http://seiker.kr/old/index.html">this link</a>.
 
 		<br><br>Thank you so much!
 		<br>Sanghoon Kim (seiker@unist.ac.kr)
