Dynamic image resizing for mobile environments.

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
         <div class="col-md-12" role="main">
 
 <h1 id="hello-world">Hello world!</h1>
-<p><center>
-    <img src="/img/great_photo_isnt_it.jpg" width="360px">
+<p><center id="photo_frame">
+    <img id="my_photo" src="/img/great_photo_isnt_it.jpg" width="360px">
     <br>Photo taken at Oct. 13th, 2018
 </center>
 <br>Hello, I'm Sanghoon Kim, senior undergraduate student at <a href="https://www.unist.ac.kr">UNIST</a>, majoring in CSE (Computer Science &amp; Engineering).
@@ -210,6 +210,7 @@
     </script>
     <!-- <script data-main="./mkdocs/js/search.js" src="./mkdocs/js/require.js"></script> -->
     <script src="./js/base.js"></script>
+    <script src="js/resize.js"></script>
     <script src="search/main.js"></script>
 
     <div class="modal" id="mkdocs_search_modal" tabindex="-1" role="dialog" aria-labelledby="Search Modal" aria-hidden="true">
@@ -245,5 +246,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-01-08 10:55:59
+Build Date UTC : 2019-01-10 07:02:30
 -->
