--- a/index.html
+++ b/index.html
@@ -131,14 +131,15 @@
 <br>Hello, I'm Sanghoon Kim, senior undergraduate student at <a href="https://www.unist.ac.kr">UNIST</a>, majoring in CSE (Computer Science &amp; Engineering).
 <br><br>Currently, I am working as an undergraduate research intern in <a href="http://ivaderlab.unist.ac.kr">iVADER lab</a>.
 <br>If you are interested, please e-mail me. (<a href="mailto:seiker@unist.ac.kr">seiker@unist.ac.kr</a>)
+<br><br>Here is my lastest CV: <a href="/CV_201902.pdf">CV_201902.pdf</a>
 <br><br>Recently I've reconstructed the website. If you want to visit old website(even though it is no longer maintained), you can follow this link: <a href="http://seiker.kr/old/index.html">http://seiker.kr/old/index.html</a></p>
 <p><br></p>
 <h3 id="available-languages">Available Languages</h3>
 <hr />
 <h4 id="english-business-level-conversation-available"><strong>English</strong> : Business-level conversation available</h4>
 <ul>
-<li><a href="https://www.ets.org/toeic">TOEIC</a> score: 920/990 (Valid until Jan. 08, 2019)</li>
 <li><a href="https://www.teps.or.kr/">TEPS</a> score: 714/990 (Valid until Dec. 03, 2019)</li>
+<li><a href="https://www.ets.org/toefl">TOEFL</a> score: 84/120 (Valid until Feb. 02, 2021)</li>
 </ul>
 <!-- COMMENTED ####**Chinese** : Low-level conversation available
 - ~~[HSK level 3](http://www.chinesetest.cn/ChangeLan.do?languge=en) score: 276/300~~ (Invalidated since Feb. 21, 2018)-->
@@ -246,5 +247,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-01-10 07:10:26
+Build Date UTC : 2019-02-17 11:12:31
 -->
