--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
     <br>Photo taken at Oct. 13th, 2018
 </center>
 <br>Hello, I'm Sanghoon Kim, senior undergraduate student at <a href="https://www.unist.ac.kr">UNIST</a>, majoring in CSE (Computer Science &amp; Engineering).
-<br><br>Currently, I am working as an undergraduate research intern in <a href="http://ivaderlab.unist.ac.kr">iVADER lab</a>.
-<br>If you are interested, please e-mail me. (<a href="mailto:seiker@unist.ac.kr">seiker@unist.ac.kr</a>)
-<br><br>Here is my lastest CV: <a href="/CV_201902.pdf">CV_201902.pdf</a>
+<br><br>Currently, I am preparing for a postgraduate (Master) position.
+<br>If you are interested in, please e-mail me. (<a href="mailto:seiker@unist.ac.kr">seiker@unist.ac.kr</a>)
+<br><br>Here is my <del>lastest</del> CV: <a href="/CV_201902.pdf">CV_201902.pdf</a>
 <br><br>Recently I've reconstructed the website. If you want to visit old website(even though it is no longer maintained), you can follow this link: <a href="http://seiker.kr/old/index.html">http://seiker.kr/old/index.html</a></p>
 <p><br></p>
 <h3 id="available-languages">Available Languages</h3>
@@ -154,9 +154,11 @@
 </ul>
 <h4 id="internship-at-interactive-visual-analysis-data-exploration-research-lab-unist"><strong>Internship</strong> at <a href="http://ivaderlab.unist.ac.kr">Interactive Visual Analysis &amp; Data Exploration Research Lab.</a>, UNIST.</h4>
 <ul>
-<li>Jan. 2018 - Now</li>
-<li>Participated in a project which helps novice developers to design mobile applications.
-<!-- COMMENTED <br> C. Lee, **<U>S. Kim</U>**, D. Han, H. Yang, Y. Park, B. C. Kwon and S. Ko, *TBA*, Paper submitted to <a href="http://chi2019.acm.org/">CHI 2019</a>.--></li>
+<li>Jan. 2018 - May 2019</li>
+<li>Participated in a project which helps developers to design and prototype mobile application in iterative process.
+<br> C. Lee, <strong><U>S. Kim</U></strong>, D. Han, H. Yang, Y. Park, B. C. Kwon and S. Ko, <em>TBA</em>, Paper submitted to <a href="https://uist.acm.org/uist2019/">ACM UIST 2019</a>.</li>
+<li>Participated in a project which aims to help user's decision among multiple coordinated charts and visualizations.
+<!-- COMMENTED --></li>
 </ul>
 <h4 id="domestic-exchange-student-to-snu-south-korea"><strong>Domestic Exchange Student</strong> to <a href="https://en.snu.ac.kr/">SNU</a>, South Korea.</h4>
 <ul>
@@ -184,7 +186,6 @@
 <ul>
 <li>GPA from 2017 Spring: 3.92 / 4.30</li>
 <li>GPA from 2018 Spring: 4.10 / 4.30</li>
-<li>GPA from 2018 Fall: 4.05 / 4.30</li>
 </ul>
 <h4 id="academic-performance-scholarship-since-mar-2015-now"><strong>Academic Performance Scholarship</strong> since Mar. 2015 - Now</h4></div>
         
@@ -247,5 +248,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-02-17 11:12:31
+Build Date UTC : 2019-05-04 11:47:46
 -->
