Postgraduate info updated.

--- a/index.html
+++ b/index.html
@@ -128,11 +128,27 @@
     <img id="my_photo" src="/img/great_photo_isnt_it.jpg" width="360px">
     <br>Photo taken at Oct. 13th, 2018
 </center>
-<br>Hello, I'm Sanghoon Kim, senior undergraduate student at <a href="https://www.unist.ac.kr">UNIST</a>, majoring in CSE (Computer Science &amp; Engineering).
-<br><br>Currently, I am preparing for a postgraduate (Master) position.
-<br>If you are interested in, please e-mail me. (<a href="mailto:seiker@unist.ac.kr">seiker@unist.ac.kr</a>)
-<br><br>Here is my <del>lastest</del> CV: <a href="/CV_201902.pdf">CV_201902.pdf</a>
-<br><br>Recently I've reconstructed the website. If you want to visit old website(even though it is no longer maintained), you can follow this link: <a href="http://seiker.kr/old/index.html">http://seiker.kr/old/index.html</a></p>
+<br>Hello, I am Sanghoon Kim, master candidate at <a href="https://www.kaist.edu">KAIST</a>, majoring in computer science.
+<br><br>I am interested in SE (Software Engineering) and HCI (Human-Computer Interaction).
+<br>More specifically, my research interest includes human-centric service computing, pervasive computing, IoT, and related issues in HCI.
+<br>My advisor is In-Young Ko, and my research group is <a href="http://webeng.kaist.ac.kr">Web Engineering and Service Computing Lab.</a>
+<br><br> My e-mail address is: seiker (AT) kaist.ac.kr
+<br>Here is my CV <strong>(quite outdated!)</strong>: <a href="/CV_201902.pdf">CV_201902.pdf</a></p>
+<p><br></p>
+<h3 id="education">Education</h3>
+<hr />
+<h4 id="korea-advanced-institute-of-science-and-technology">Korea Advanced Institute of Science and Technology</h4>
+<ul>
+<li>Sep. 2019 - Present</li>
+<li>M.S. candidate in <a href="https://cs.kaist.ac.kr/">School of Computing, KAIST</a></li>
+</ul>
+<h4 id="ulsan-national-institute-of-science-and-technology">Ulsan National Institute of Science and Technology</h4>
+<ul>
+<li>Mar. 2015 - Aug. 2019</li>
+<li>B.S. <em>magna cum laude</em> in Electrical and Computer Engineering</li>
+<li>Majored in Computer Science and Engineering, minored in Management Engineering</li>
+<li>Overall GPA 3.78 / 4.3, Major GPA 3.99 / 4.3</li>
+</ul>
 <p><br></p>
 <h3 id="available-languages">Available Languages</h3>
 <hr />
@@ -156,7 +172,7 @@
 <ul>
 <li>Jan. 2018 - May 2019</li>
 <li>Participated in a project which helps developers to design and prototype mobile application in iterative process.
-<br> C. Lee, <strong><U>S. Kim</U></strong>, D. Han, H. Yang, Y. Park, B. C. Kwon and S. Ko, <em>TBA</em>, Paper submitted to <a href="https://uist.acm.org/uist2019/">ACM UIST 2019</a>.</li>
+<br> C. Lee, <strong><U>S. Kim</U></strong>, D. Han, H. Yang, Y. Park, B. C. Kwon and S. Ko, <em>TBA</em></li>
 <li>Participated in a project which aims to help user's decision among multiple coordinated charts and visualizations.
 <!-- COMMENTED --></li>
 </ul>
@@ -184,10 +200,14 @@
 </ul>
 <h4 id="semester-academic-excellence-award-for-three-times"><strong>Semester Academic Excellence Award</strong> for three times</h4>
 <ul>
-<li>GPA from 2017 Spring: 3.92 / 4.30</li>
-<li>GPA from 2018 Spring: 4.10 / 4.30</li>
+<li>GPA from 2017 Spring: 3.92 / 4.3</li>
+<li>GPA from 2018 Spring: 4.10 / 4.3</li>
+<li>GPA from 2018 Fall: 4.05 / 4.3</li>
 </ul>
-<h4 id="academic-performance-scholarship-since-mar-2015-now"><strong>Academic Performance Scholarship</strong> since Mar. 2015 - Now</h4></div>
+<h4 id="academic-performance-scholarship-from-mar-2015-to-aug-2019"><strong>Academic Performance Scholarship</strong> from Mar. 2015 to Aug. 2019</h4>
+<ul>
+<li>Full-tuition scholarship with monthly stipend of KRW 160,000 (about $160).</li>
+</ul></div>
         
         
     </div>
@@ -248,5 +268,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2019-05-04 11:47:46
+Build Date UTC : 2019-09-08 04:15:24
 -->
