--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 <br>More specifically, my research interest includes human-centric service computing, pervasive computing, IoT, and related issues in HCI.
 <br>My advisor is Prof. In-Young Ko, and my research group is <a href="http://webeng.kaist.ac.kr">Web Engineering and Service Computing Lab.</a>
 <br><br> My e-mail address is: seiker (AT) kaist.ac.kr
-<br>Here is my CV: <a href="/CV_202002.pdf">CV_202002.pdf</a></p>
+<br>Here is my CV: <a href="/CV_202002.pdf">CV_202002.pdf</a> (Outdated!)</p>
 <p><br></p>
 <h3 id="education">Education</h3>
 <hr />
@@ -141,7 +141,7 @@
 <ul>
 <li>Sep. 2019 - Present</li>
 <li>Master's student in <a href="https://cs.kaist.ac.kr/">School of Computing, KAIST</a></li>
-<li>Overall GPA 4.00 / 4.3</li>
+<li>Overall GPA 4.05 / 4.3</li>
 </ul>
 <h4 id="ulsan-national-institute-of-science-and-technology-unist">Ulsan National Institute of Science and Technology (UNIST)</h4>
 <ul>
@@ -165,10 +165,11 @@
 <hr />
 <h4 id="international-conferences"><strong>International Conferences</strong></h4>
 <ul>
-<li>C. Lee, <U>S. Kim</U>, D. Han, H. Yang, Y. Park, B. C. Kwon and S. Ko, GUIComp: Design and Evaluation of Mobile GUI Design Assistant with Real-Time, Multi-Faceted Feedback, CHI '20 (To appear)</li>
+<li>C. Lee, <U>S. Kim</U>, D. Han, H. Yang, Y. Park, B. C. Kwon and S. Ko, GUIComp: Design and Evaluation of Mobile GUI Design Assistant with Real-Time, Multi-Faceted Feedback, CHI '20</li>
 </ul>
 <h4 id="domestic-conferences"><strong>Domestic Conferences</strong></h4>
 <ul>
+<li><U>S. Kim</U> and I.-Y. Ko, Conversational Services Composition Model to Support End-User Services Composition in IoT Environments (IoT 환경에서 최종 사용자 서비스 조합을 지원하기 위한 대화형 서비스 조합 모델), KCC '20 <em>[Best Paper Award]</em></li>
 <li><U>S. Kim</U> and I.-Y. Ko, Precondition and Goal State Assertion for Improving the Reliability of Trigger-Action Based Service Mashup (트리거-액션 기반 서비스 매쉬업의 신뢰도를 개선하기 위한 전제 상태 및 목표 상태 검증 방법), KCSE '20 Short</li>
 </ul>
 <h4 id="posters"><strong>Posters</strong></h4>
@@ -195,9 +196,13 @@
 
 <h3 id="other-experience">Other Experience</h3>
 <hr />
+<h4 id="teaching-assistant-data-structure-cs206-kaist"><strong>Teaching Assistant</strong>, Data Structure (CS206), KAIST.</h4>
+<ul>
+<li>2020 Spring semester (Mar. 2020 - Jun. 2020)</li>
+</ul>
 <h4 id="teaching-assistant-introduction-to-services-computing-cs459-kaist"><strong>Teaching Assistant</strong>, Introduction to Services Computing (CS459), KAIST.</h4>
 <ul>
-<li>2019 Fall semester (Mar. 2019 - Jun. 2019)</li>
+<li>2019 Fall semester (Sep. 2019 - Dec. 2019)</li>
 </ul>
 <h4 id="international-exchange-student-to-hkust-hong-kong"><strong>International Exchange Student</strong> to <a href="https://www.ust.hk/">HKUST</a>, Hong Kong.</h4>
 <ul>
@@ -291,5 +296,5 @@
 
 <!--
 MkDocs version : 1.0.4
-Build Date UTC : 2020-02-19 11:42:04
+Build Date UTC : 2020-08-01 07:34:32
 -->
